--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iview-admin",
+  "name": "changningadmin",
   "version": "2.0.0",
   "author": "Lison<lison.modern@gmail.com>",
   "private": false,
